--- a/css/style.css
+++ b/css/style.css
@@ -88,13 +88,30 @@ a {
 .btn-blue {
   background-color: #81b3d2;
 }
+.btn-blue:hover {
+  background-color: #669ec0;
+}
+.btn-blue:focus {
+  color: rgba(255, 255, 255, 0.3)
+  background-color: #5496bd;
+}
+
 .btn-brown {
   background-color: #766357;
+}
+.btn-brown:hover {
+  background-color: #604e43;
+}
+.btn-brown:focus {
+  color: rgba(255, 255, 255, 0.3)
+  background-color: #503e33;
 }
 
 
 /* Footer -------------------------------------------- */
-
+.footer-social {
+  list-style: none;
+}
 @font-face {
   font-family: "PT Sans";
   font-family: 400;
