--- a/css/style.css
+++ b/css/style.css
@@ -86,21 +86,25 @@ a {
   text-transform: uppercase;
   border: none;
 }
+
 .btn-index {
   font-size: 21px;
   line-height: 26px;
 }
+
 .btn-hotel {
   font-size: 14px;
   line-height: 21px;
 }
+
 .btn-blue {
   background-color: #81b3d2;
 }
-.btn-blue:hover,
-.btn-blue:focus {
+
+.btn-blue:hover, .btn-blue:focus {
   background-color: #669ec0;
 }
+
 .btn-blue:active {
   color: rgba(255, 255, 255, 0.3);
   background-color: #5496bd;
@@ -109,25 +113,83 @@ a {
 .btn-brown {
   background-color: #766357;
 }
-.btn-brown:hover,
-.btn-brown:focus {
+
+.btn-brown:hover, .btn-brown:focus {
   background-color: #604e43;
 }
+
 .btn-brown:active {
   color: rgba(255, 255, 255, 0.3);
   background-color: #503e33;
 }
 
-
 /* Footer -------------------------------------------- */
-.footer-hashteg {font-weight: bold;
+
+.main-footer {
+  color: #000000;
+  background-color: #ffffff;
 }
-ul.footer-social {
+
+}
+
+.footer-hashteg {
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
+}
+
+.footer-social li {
   list-style: none;
 }
-.social-button {color: #000000;
+
+.social-button {
+  color: #000000;
 }
 
-.footer-copyright a:focus {
-  color: #81b3d2;
+/* Modal window -------------------------------------------- */
+
+.appointment {
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.appointment h2 {
+  font-size: 30px;
+  line-height: 36px;
+}
+
+.text-row input[type="text"], .text-row input[type="password"] {
+  font: inherit;
+  color: #000000;
+  text-transform: uppercase;
+  background-color: #f2f2f2;
+  border: none;
+}
+
+.text-row input[type="text"]:hover, .text-row input[type="password"]:hover {
+  background-color: #ebebeb;
+}
+
+.text-row input[type="text"]:focus, .text-row input[type="password"]:focus {
+  border: 2px solid #e5e5e5;
+}
+
+/* Inner -------------------------------------------- */
+
+.filter {
+  color: #ffffff;
+  background-color: #000000;
+  background-image: url("img/bgfilter.jpg");
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+
+.filter.filter-form {
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.filter.filter-title h2 {
+  font-size: 16px;
+  line-height: 21px;
 }
